Базовый вариант интферфейса

--- a/description
+++ b/description
@@ -13,11 +13,38 @@
 4) Создать файлы. По нажатию на эту кнопку будет происходит генерация файлов из заданного шаблона
 
 Примечания
-Если не выбраны файл с данными или шаблон , то пользователь при нажатии на кнопку Создать файлы должен получить информационнное сообщение о том что нужно выбрать
+Если не выбраны файл с данными или шаблон , то пользователь
+ при нажатии на кнопку Создать файлы должен получить информационнное сообщение о том что нужно выбрать
 эти файлы.
 Если не выбрана конечная папка, то файлы генерируются в папку где запущена программа. Хотя наверное лучше заставлять пользователя выбирать эту папку.
 После завершения генерации файлов необходимо отображать информационное сообщение о том что файлы сгенерированы.
 Обработка ошибок
 Если в ходе работы возникает ошибка, то она должна отображаться пользователю. Должен записываться текстовый файл в котором будет описана вся информация о ошибке.
 После возникновения ошибки программа должна корректно закрыться.
+
+План работ
+1) Изучение tkinter
+Опробовать базовую функциональность
+2) Создание интерфейса
+3) Реализация функциональности
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
