Переработан интерфейс.функции организованы с помощью вкладок.Реализована проверка наличия необходимых аргументов при запуске программы.Если не выбран какой то файл или папка то программа выдает предупреждающее сообщение, чтобы пользователь выбрал верные аргументы.

--- a/description
+++ b/description
@@ -28,6 +28,19 @@
 2) Создание интерфейса
 3) Реализация функциональности
 
+09.03
+Добавить новые теги:
+1) ЦОПП или МЦПК
+2) Подготовка, переподготовка, повышение квалификации
+
+Реализовать генерацию нового шаблона удостоверения о повышении
+
+Создать вкладки:
+Свидетельство о профессии
+Удостоверение о повышении квалификации
+Диплом о профессиональной переподготовке
+
+
 
 
 
