Добавлены новые поля в шаблон для генерации свидетельства. В связи с этим добавлены небольшие изменения в программе. Переименованы поля

--- a/description
+++ b/description
@@ -29,20 +29,24 @@
 3) Реализация функциональности
 
 09.03
-Добавить новые теги:
-1) ЦОПП или МЦПК
-2) Подготовка, переподготовка, повышение квалификации
 
 Реализовать генерацию нового шаблона удостоверения о повышении
 
 Создать вкладки:
-Свидетельство о профессии
-Удостоверение о повышении квалификации
-Диплом о профессиональной переподготовке
+Свидетельство о профессии+
+Удостоверение о повышении квалификации+
 
 
 
+10.03
+Добавить порядок действий в виде нумерации
 
+Добавить новые теги:
+1) ЦОПП или МЦПК
+2) Подготовка, переподготовка, повышение квалификации
+
+
+Создать вкладку Создание удостоверений
 
 
 
